@@ -18,7 +18,7 @@ if ( $@ ) {
     plan skip_all => "AptPkg::Config is not installed";
 }
 elsif ( -r '/etc/debian_version' ) {
-    plan tests => 163;
+    plan tests => 172;
 }
 else {
     plan skip_all => "Not a Debian system";
@@ -193,6 +193,9 @@ my @tests = (
         errors =>  [ 
             qr/not declared/ => 'License:Expat="Expat license foobar"',
         ],
+    },
+
+    { # t13 Debian bug #624305
    }
 );
 
